--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "commander": "^10.0.0",
-    "nanoid": "3.3.4"
+    "nanoid": "3.3.4",
+    "yargs": "^17.7.2"
   }
 }
